--- a/src/Components/chefs/Chefs.css
+++ b/src/Components/chefs/Chefs.css
@@ -60,8 +60,11 @@
     
     .chef-img {
         width: 100%;
-        /* border-radius: 10px; */
+        border-radius: 100%;
+        height: 300px !important;
+        width: 300px !important;
         transition: transform 0.3s ease;
+
     }
     
     .png-img {
